Education section added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/typed.js"
     ></script>
+    <style>
+      table{
+        border: 2px solid black;
+        border-radius: 5px;
+        margin: 5px auto;
+        border-collapse:separate;
+
+      }
+      .edu{
+        text-align: center;
+        font-family: 'Oswald';
+      }
+      table,td,span{
+        font-family: 'Oswald';
+      }
+      table,th,td{
+        
+        padding: 5px;
+      }
+      td{
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <!-- NAVBAR STARTS HERE -->
@@ -263,6 +286,47 @@
       </section>
     </div>
     <!-- SKILLS PART END HERE  -->
+
+   <!-- EDUCATION PARTS START HERE  -->
+   <table>
+    <h3 class="edu">EDUCATION</h3>
+    <colgroup>
+        <col span="1" style="background-color:rgb(120, 198, 72)">
+        <col span="1" style="background-color: rgb(180, 129, 228);">
+        <col span="1" style="background-color: cadetblue;">
+        <col span="1" style="background-color: bisque;">
+        <col span="1" style="background-color: yellow;">
+      </colgroup>
+      
+    <tr>
+      <th class="text-center">Standard</th>
+      <th class="text-center">School/College</th>
+      <th class="text-center">Board</th>
+      <th class="text-center">Year</th>
+      <th class="text-center">%</th>
+    </tr>
+    <tr>
+      <td class="text-center">B.E <br><span>(Computer science engineering)</span></td>
+      <td>SAMBHRAM INSTITUTE OF TECHNOLOGY(INDIA)</td>
+      <td>VTU</td>
+      <td>2018-2022</td>
+      <td>--</td>
+    </tr>
+      <td class="text-center">+2<br><span>(science)</span></td>
+      <td>JANTA MULTIPLE CAMPUS(NEPAL)</td>
+      <td>NEB</td>
+      <td>2016-2018</td>
+      <td>65%</td>
+    </tr>
+    <tr>
+      <td class="text-center">10th</td>
+      <td>BHADHAGAUN SINUWARI HIGHER SECONDARY SCHOOL(NEPAL)</td>
+      <td>SLC</td>
+      <td>2016</td>
+      <td>81.25%</td>
+    </tr>
+</table>
+   <!-- EDUCATION PARTS END HERE  -->
 
     <!-- CONTACT PART START HERE  -->
     <div class="alert alert-warning text-center  mb-0 sorry-alert" role="alert">
