update table data

--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
       <td class="text-center">B.E <br><span>(Computer science engineering)</span></td>
       <td>SAMBHRAM INSTITUTE OF TECHNOLOGY(INDIA)</td>
       <td>VTU</td>
-      <td>2018-2022</td>
-      <td>--</td>
+      <td>2018-2022(Completed)</td>
+      <td>71%</td>
     </tr>
       <td class="text-center">+2<br><span>(science)</span></td>
       <td>JANTA MULTIPLE CAMPUS(NEPAL)</td>
